y.output
Terminals which are not used

   T_Uint
   T_Bvec2
   T_Bvec3
   T_Bvec4
   T_Ivec2
   T_Ivec3
   T_Ivec4
   T_Uvec2
   T_Uvec3
   T_Uvec4
   T_Do
   LOWEST


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: Declaration
    5     | FuncDecl CompoundStatement

    6 Declaration: FuncDecl T_Semicolon
    7            | SingleDecl T_Semicolon

    8 FuncDecl: TypeDecl T_Identifier T_LeftParen T_RightParen
    9         | TypeDecl T_Identifier T_LeftParen ParameterList T_RightParen

   10 ParameterList: SingleDecl
   11              | ParameterList T_Comma SingleDecl

   12 SingleDecl: TypeDecl T_Identifier
   13           | TypeQualify TypeDecl T_Identifier
   14           | TypeDecl T_Identifier T_Equal Initializer
   15           | TypeQualify TypeDecl T_Identifier T_Equal Initializer
   16           | TypeDecl T_Identifier T_LeftBracket T_IntConstant T_RightBracket
   17           | TypeQualify TypeDecl T_Identifier T_LeftBracket T_IntConstant T_RightBracket

   18 Initializer: Expression

   19 TypeQualify: T_In
   20            | T_Out
   21            | T_Const
   22            | T_Uniform

   23 TypeDecl: T_Int
   24         | T_Void
   25         | T_Float
   26         | T_Bool
   27         | T_Vec2
   28         | T_Vec3
   29         | T_Vec4
   30         | T_Mat2
   31         | T_Mat3
   32         | T_Mat4

   33 CompoundStatement: T_LeftBrace T_RightBrace
   34                  | T_LeftBrace StatementList T_RightBrace

   35 StatementList: Statement
   36              | StatementList Statement

   37 Statement: CompoundStatement
   38          | SingleStatement

   39 SingleStatement: T_Semicolon
   40                | SingleDecl T_Semicolon
   41                | Expression T_Semicolon
   42                | SelectionStmt
   43                | SwitchStmt
   44                | CaseStmt
   45                | JumpStmt
   46                | WhileStmt
   47                | ForStmt

   48 SelectionStmt: T_If T_LeftParen Expression T_RightParen Statement T_Else Statement
   49              | T_If T_LeftParen Expression T_RightParen Statement

   50 SwitchStmt: T_Switch T_LeftParen Expression T_RightParen T_LeftBrace StatementList T_RightBrace

   51 CaseStmt: T_Case Expression T_Colon Statement
   52         | T_Default T_Colon Statement

   53 JumpStmt: T_Break T_Semicolon
   54         | T_Continue T_Semicolon
   55         | T_Return T_Semicolon
   56         | T_Return Expression T_Semicolon

   57 WhileStmt: T_While T_LeftParen Expression T_RightParen Statement

   58 ForStmt: T_For T_LeftParen Expression T_Semicolon Expression T_Semicolon Expression T_RightParen Statement

   59 PrimaryExpr: T_Identifier
   60            | T_IntConstant
   61            | T_FloatConstant
   62            | T_BoolConstant
   63            | T_LeftParen Expression T_RightParen

   64 FunctionCallExpr: FunctionCallHeaderWithParameters T_RightParen
   65                 | FunctionCallHeaderNoParameters T_RightParen

   66 FunctionCallHeaderNoParameters: FunctionIdentifier T_LeftParen T_Void
   67                               | FunctionIdentifier T_LeftParen

   68 FunctionCallHeaderWithParameters: FunctionIdentifier T_LeftParen ArgumentList

   69 ArgumentList: Expression
   70             | ArgumentList T_Comma Expression

   71 FunctionIdentifier: T_Identifier

   72 PostfixExpr: PrimaryExpr
   73            | PostfixExpr T_LeftBracket Expression T_RightBracket
   74            | FunctionCallExpr
   75            | PostfixExpr T_Inc
   76            | PostfixExpr T_Dec
   77            | PostfixExpr T_Dot T_FieldSelection

   78 UnaryExpr: PostfixExpr
   79          | T_Inc UnaryExpr
   80          | T_Dec UnaryExpr
   81          | T_Plus UnaryExpr
   82          | T_Dash UnaryExpr

   83 MultiExpr: UnaryExpr
   84          | MultiExpr T_Star UnaryExpr
   85          | MultiExpr T_Slash UnaryExpr

   86 AdditionExpr: MultiExpr
   87             | AdditionExpr T_Plus MultiExpr
   88             | AdditionExpr T_Dash MultiExpr

   89 RelationExpr: AdditionExpr
   90             | RelationExpr T_LeftAngle AdditionExpr
   91             | RelationExpr T_RightAngle AdditionExpr
   92             | RelationExpr T_GreaterEqual AdditionExpr
   93             | RelationExpr T_LessEqual AdditionExpr

   94 EqualityExpr: RelationExpr
   95             | EqualityExpr T_EQ RelationExpr
   96             | EqualityExpr T_NE RelationExpr

   97 LogicAndExpr: EqualityExpr
   98             | LogicAndExpr T_And EqualityExpr

   99 LogicOrExpr: LogicAndExpr
  100            | LogicOrExpr T_Or LogicAndExpr

  101 Expression: LogicOrExpr
  102           | LogicOrExpr T_Question LogicOrExpr T_Colon LogicOrExpr
  103           | UnaryExpr AssignOp Expression

  104 AssignOp: T_Equal
  105         | T_AddAssign
  106         | T_SubAssign
  107         | T_MulAssign
  108         | T_DivAssign


Terminals, with rules where they appear

$end (0) 0
error (256)
T_Void (258) 24 66
T_Bool (259) 26
T_Int (260) 23
T_Float (261) 25
T_Uint (262)
T_Bvec2 (263)
T_Bvec3 (264)
T_Bvec4 (265)
T_Ivec2 (266)
T_Ivec3 (267)
T_Ivec4 (268)
T_Uvec2 (269)
T_Uvec3 (270)
T_Uvec4 (271)
T_Vec2 (272) 27
T_Vec3 (273) 28
T_Vec4 (274) 29
T_Mat2 (275) 30
T_Mat3 (276) 31
T_Mat4 (277) 32
T_While (278) 57
T_For (279) 58
T_If (280) 48 49
T_Else (281) 48
T_Return (282) 55 56
T_Break (283) 53
T_Continue (284) 54
T_Do (285)
T_Switch (286) 50
T_Case (287) 51
T_Default (288) 52
T_In (289) 19
T_Out (290) 20
T_Const (291) 21
T_Uniform (292) 22
T_LeftParen (293) 8 9 48 49 50 57 58 63 66 67 68
T_RightParen (294) 8 9 48 49 50 57 58 63 64 65
T_LeftBracket (295) 16 17 73
T_RightBracket (296) 16 17 73
T_LeftBrace (297) 33 34 50
T_RightBrace (298) 33 34 50
T_Dot (299) 77
T_Comma (300) 11 70
T_Colon (301) 51 52 102
T_Semicolon (302) 6 7 39 40 41 53 54 55 56 58
T_Question (303) 102
T_LessEqual (304) 93
T_GreaterEqual (305) 92
T_EQ (306) 95
T_NE (307) 96
T_And (308) 98
T_Or (309) 100
T_Plus (310) 81 87
T_Star (311) 84
T_MulAssign (312) 107
T_DivAssign (313) 108
T_AddAssign (314) 105
T_SubAssign (315) 106
T_Equal (316) 14 15 104
T_LeftAngle (317) 90
T_RightAngle (318) 91
T_Dash (319) 82 88
T_Slash (320) 85
T_Inc (321) 75 79
T_Dec (322) 76 80
T_Identifier (323) 8 9 12 13 14 15 16 17 59 71
T_IntConstant (324) 16 17 60
T_FloatConstant (325) 61
T_BoolConstant (326) 62
T_FieldSelection (327) 77
LOWEST (328)
LOWER_THAN_ELSE (329)


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
Program (76)
    on left: 1, on right: 0
DeclList (77)
    on left: 2 3, on right: 1 2
Decl (78)
    on left: 4 5, on right: 2 3
Declaration (79)
    on left: 6 7, on right: 4
FuncDecl (80)
    on left: 8 9, on right: 5 6
ParameterList (81)
    on left: 10 11, on right: 9 11
SingleDecl (82)
    on left: 12 13 14 15 16 17, on right: 7 10 11 40
Initializer (83)
    on left: 18, on right: 14 15
TypeQualify (84)
    on left: 19 20 21 22, on right: 13 15 17
TypeDecl (85)
    on left: 23 24 25 26 27 28 29 30 31 32, on right: 8 9 12 13 14
    15 16 17
CompoundStatement (86)
    on left: 33 34, on right: 5 37
StatementList (87)
    on left: 35 36, on right: 34 36 50
Statement (88)
    on left: 37 38, on right: 35 36 48 49 51 52 57 58
SingleStatement (89)
    on left: 39 40 41 42 43 44 45 46 47, on right: 38
SelectionStmt (90)
    on left: 48 49, on right: 42
SwitchStmt (91)
    on left: 50, on right: 43
CaseStmt (92)
    on left: 51 52, on right: 44
JumpStmt (93)
    on left: 53 54 55 56, on right: 45
WhileStmt (94)
    on left: 57, on right: 46
ForStmt (95)
    on left: 58, on right: 47
PrimaryExpr (96)
    on left: 59 60 61 62 63, on right: 72
FunctionCallExpr (97)
    on left: 64 65, on right: 74
FunctionCallHeaderNoParameters (98)
    on left: 66 67, on right: 65
FunctionCallHeaderWithParameters (99)
    on left: 68, on right: 64
ArgumentList (100)
    on left: 69 70, on right: 68 70
FunctionIdentifier (101)
    on left: 71, on right: 66 67 68
PostfixExpr (102)
    on left: 72 73 74 75 76 77, on right: 73 75 76 77 78
UnaryExpr (103)
    on left: 78 79 80 81 82, on right: 79 80 81 82 83 84 85 103
MultiExpr (104)
    on left: 83 84 85, on right: 84 85 86 87 88
AdditionExpr (105)
    on left: 86 87 88, on right: 87 88 89 90 91 92 93
RelationExpr (106)
    on left: 89 90 91 92 93, on right: 90 91 92 93 94 95 96
EqualityExpr (107)
    on left: 94 95 96, on right: 95 96 97 98
LogicAndExpr (108)
    on left: 97 98, on right: 98 99 100
LogicOrExpr (109)
    on left: 99 100, on right: 100 101 102
Expression (110)
    on left: 101 102 103, on right: 18 41 48 49 50 51 56 57 58 63 69
    70 73 103
AssignOp (111)
    on left: 104 105 106 107 108, on right: 103


state 0

    0 $accept: . Program $end

    T_Void     shift, and go to state 1
    T_Bool     shift, and go to state 2
    T_Int      shift, and go to state 3
    T_Float    shift, and go to state 4
    T_Vec2     shift, and go to state 5
    T_Vec3     shift, and go to state 6
    T_Vec4     shift, and go to state 7
    T_Mat2     shift, and go to state 8
    T_Mat3     shift, and go to state 9
    T_Mat4     shift, and go to state 10
    T_In       shift, and go to state 11
    T_Out      shift, and go to state 12
    T_Const    shift, and go to state 13
    T_Uniform  shift, and go to state 14

    Program      go to state 15
    DeclList     go to state 16
    Decl         go to state 17
    Declaration  go to state 18
    FuncDecl     go to state 19
    SingleDecl   go to state 20
    TypeQualify  go to state 21
    TypeDecl     go to state 22


state 1

   24 TypeDecl: T_Void .

    $default  reduce using rule 24 (TypeDecl)


state 2

   26 TypeDecl: T_Bool .

    $default  reduce using rule 26 (TypeDecl)


state 3

   23 TypeDecl: T_Int .

    $default  reduce using rule 23 (TypeDecl)


state 4

   25 TypeDecl: T_Float .

    $default  reduce using rule 25 (TypeDecl)


state 5

   27 TypeDecl: T_Vec2 .

    $default  reduce using rule 27 (TypeDecl)


state 6

   28 TypeDecl: T_Vec3 .

    $default  reduce using rule 28 (TypeDecl)


state 7

   29 TypeDecl: T_Vec4 .

    $default  reduce using rule 29 (TypeDecl)


state 8

   30 TypeDecl: T_Mat2 .

    $default  reduce using rule 30 (TypeDecl)


state 9

   31 TypeDecl: T_Mat3 .

    $default  reduce using rule 31 (TypeDecl)


state 10

   32 TypeDecl: T_Mat4 .

    $default  reduce using rule 32 (TypeDecl)


state 11

   19 TypeQualify: T_In .

    $default  reduce using rule 19 (TypeQualify)


state 12

   20 TypeQualify: T_Out .

    $default  reduce using rule 20 (TypeQualify)


state 13

   21 TypeQualify: T_Const .

    $default  reduce using rule 21 (TypeQualify)


state 14

   22 TypeQualify: T_Uniform .

    $default  reduce using rule 22 (TypeQualify)


state 15

    0 $accept: Program . $end

    $end  shift, and go to state 23


state 16

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void     shift, and go to state 1
    T_Bool     shift, and go to state 2
    T_Int      shift, and go to state 3
    T_Float    shift, and go to state 4
    T_Vec2     shift, and go to state 5
    T_Vec3     shift, and go to state 6
    T_Vec4     shift, and go to state 7
    T_Mat2     shift, and go to state 8
    T_Mat3     shift, and go to state 9
    T_Mat4     shift, and go to state 10
    T_In       shift, and go to state 11
    T_Out      shift, and go to state 12
    T_Const    shift, and go to state 13
    T_Uniform  shift, and go to state 14

    $default  reduce using rule 1 (Program)

    Decl         go to state 24
    Declaration  go to state 18
    FuncDecl     go to state 19
    SingleDecl   go to state 20
    TypeQualify  go to state 21
    TypeDecl     go to state 22


state 17

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 18

    4 Decl: Declaration .

    $default  reduce using rule 4 (Decl)


state 19

    5 Decl: FuncDecl . CompoundStatement
    6 Declaration: FuncDecl . T_Semicolon

    T_LeftBrace  shift, and go to state 25
    T_Semicolon  shift, and go to state 26

    CompoundStatement  go to state 27


state 20

    7 Declaration: SingleDecl . T_Semicolon

    T_Semicolon  shift, and go to state 28


state 21

   13 SingleDecl: TypeQualify . TypeDecl T_Identifier
   15           | TypeQualify . TypeDecl T_Identifier T_Equal Initializer
   17           | TypeQualify . TypeDecl T_Identifier T_LeftBracket T_IntConstant T_RightBracket

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    TypeDecl  go to state 29


state 22

    8 FuncDecl: TypeDecl . T_Identifier T_LeftParen T_RightParen
    9         | TypeDecl . T_Identifier T_LeftParen ParameterList T_RightParen
   12 SingleDecl: TypeDecl . T_Identifier
   14           | TypeDecl . T_Identifier T_Equal Initializer
   16           | TypeDecl . T_Identifier T_LeftBracket T_IntConstant T_RightBracket

    T_Identifier  shift, and go to state 30


state 23

    0 $accept: Program $end .

    $default  accept


state 24

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 25

   33 CompoundStatement: T_LeftBrace . T_RightBrace
   34                  | T_LeftBrace . StatementList T_RightBrace

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_While          shift, and go to state 31
    T_For            shift, and go to state 32
    T_If             shift, and go to state 33
    T_Return         shift, and go to state 34
    T_Break          shift, and go to state 35
    T_Continue       shift, and go to state 36
    T_Switch         shift, and go to state 37
    T_Case           shift, and go to state 38
    T_Default        shift, and go to state 39
    T_In             shift, and go to state 11
    T_Out            shift, and go to state 12
    T_Const          shift, and go to state 13
    T_Uniform        shift, and go to state 14
    T_LeftParen      shift, and go to state 40
    T_LeftBrace      shift, and go to state 25
    T_RightBrace     shift, and go to state 41
    T_Semicolon      shift, and go to state 42
    T_Plus           shift, and go to state 43
    T_Dash           shift, and go to state 44
    T_Inc            shift, and go to state 45
    T_Dec            shift, and go to state 46
    T_Identifier     shift, and go to state 47
    T_IntConstant    shift, and go to state 48
    T_FloatConstant  shift, and go to state 49
    T_BoolConstant   shift, and go to state 50

    SingleDecl                        go to state 51
    TypeQualify                       go to state 21
    TypeDecl                          go to state 52
    CompoundStatement                 go to state 53
    StatementList                     go to state 54
    Statement                         go to state 55
    SingleStatement                   go to state 56
    SelectionStmt                     go to state 57
    SwitchStmt                        go to state 58
    CaseStmt                          go to state 59
    JumpStmt                          go to state 60
    WhileStmt                         go to state 61
    ForStmt                           go to state 62
    PrimaryExpr                       go to state 63
    FunctionCallExpr                  go to state 64
    FunctionCallHeaderNoParameters    go to state 65
    FunctionCallHeaderWithParameters  go to state 66
    FunctionIdentifier                go to state 67
    PostfixExpr                       go to state 68
    UnaryExpr                         go to state 69
    MultiExpr                         go to state 70
    AdditionExpr                      go to state 71
    RelationExpr                      go to state 72
    EqualityExpr                      go to state 73
    LogicAndExpr                      go to state 74
    LogicOrExpr                       go to state 75
    Expression                        go to state 76


state 26

    6 Declaration: FuncDecl T_Semicolon .

    $default  reduce using rule 6 (Declaration)


state 27

    5 Decl: FuncDecl CompoundStatement .

    $default  reduce using rule 5 (Decl)


state 28

    7 Declaration: SingleDecl T_Semicolon .

    $default  reduce using rule 7 (Declaration)


state 29

   13 SingleDecl: TypeQualify TypeDecl . T_Identifier
   15           | TypeQualify TypeDecl . T_Identifier T_Equal Initializer
   17           | TypeQualify TypeDecl . T_Identifier T_LeftBracket T_IntConstant T_RightBracket

    T_Identifier  shift, and go to state 77


state 30

    8 FuncDecl: TypeDecl T_Identifier . T_LeftParen T_RightParen
    9         | TypeDecl T_Identifier . T_LeftParen ParameterList T_RightParen
   12 SingleDecl: TypeDecl T_Identifier .
   14           | TypeDecl T_Identifier . T_Equal Initializer
   16           | TypeDecl T_Identifier . T_LeftBracket T_IntConstant T_RightBracket

    T_LeftParen    shift, and go to state 78
    T_LeftBracket  shift, and go to state 79
    T_Equal        shift, and go to state 80

    $default  reduce using rule 12 (SingleDecl)


state 31

   57 WhileStmt: T_While . T_LeftParen Expression T_RightParen Statement

    T_LeftParen  shift, and go to state 81


state 32

   58 ForStmt: T_For . T_LeftParen Expression T_Semicolon Expression T_Semicolon Expression T_RightParen Statement

    T_LeftParen  shift, and go to state 82


state 33

   48 SelectionStmt: T_If . T_LeftParen Expression T_RightParen Statement T_Else Statement
   49              | T_If . T_LeftParen Expression T_RightParen Statement

    T_LeftParen  shift, and go to state 83


state 34

   55 JumpStmt: T_Return . T_Semicolon
   56         | T_Return . Expression T_Semicolon

    T_LeftParen      shift, and go to state 40
    T_Semicolon      shift, and go to state 84
    T_Plus           shift, and go to state 43
    T_Dash           shift, and go to state 44
    T_Inc            shift, and go to state 45
    T_Dec            shift, and go to state 46
    T_Identifier     shift, and go to state 47
    T_IntConstant    shift, and go to state 48
    T_FloatConstant  shift, and go to state 49
    T_BoolConstant   shift, and go to state 50

    PrimaryExpr                       go to state 63
    FunctionCallExpr                  go to state 64
    FunctionCallHeaderNoParameters    go to state 65
    FunctionCallHeaderWithParameters  go to state 66
    FunctionIdentifier                go to state 67
    PostfixExpr                       go to state 68
    UnaryExpr                         go to state 69
    MultiExpr                         go to state 70
    AdditionExpr                      go to state 71
    RelationExpr                      go to state 72
    EqualityExpr                      go to state 73
    LogicAndExpr                      go to state 74
    LogicOrExpr                       go to state 75
    Expression                        go to state 85


state 35

   53 JumpStmt: T_Break . T_Semicolon

    T_Semicolon  shift, and go to state 86


state 36

   54 JumpStmt: T_Continue . T_Semicolon

    T_Semicolon  shift, and go to state 87


state 37

   50 SwitchStmt: T_Switch . T_LeftParen Expression T_RightParen T_LeftBrace StatementList T_RightBrace

    T_LeftParen  shift, and go to state 88


state 38

   51 CaseStmt: T_Case . Expression T_Colon Statement

    T_LeftParen      shift, and go to state 40
    T_Plus           shift, and go to state 43
    T_Dash           shift, and go to state 44
    T_Inc            shift, and go to state 45
    T_Dec            shift, and go to state 46
    T_Identifier     shift, and go to state 47
    T_IntConstant    shift, and go to state 48
    T_FloatConstant  shift, and go to state 49
    T_BoolConstant   shift, and go to state 50

    PrimaryExpr                       go to state 63
    FunctionCallExpr                  go to state 64
    FunctionCallHeaderNoParameters    go to state 65
    FunctionCallHeaderWithParameters  go to state 66
    FunctionIdentifier                go to state 67
    PostfixExpr                       go to state 68
    UnaryExpr                         go to state 69
    MultiExpr                         go to state 70
    AdditionExpr                      go to state 71
    RelationExpr                      go to state 72
    EqualityExpr                      go to state 73
    LogicAndExpr                      go to state 74
    LogicOrExpr                       go to state 75
    Expression                        go to state 89


state 39

   52 CaseStmt: T_Default . T_Colon Statement

    T_Colon  shift, and go to state 90


state 40

   63 PrimaryExpr: T_LeftParen . Expression T_RightParen

    T_LeftParen      shift, and go to state 40
    T_Plus           shift, and go to state 43
    T_Dash           shift, and go to state 44
    T_Inc            shift, and go to state 45
    T_Dec            shift, and go to state 46
    T_Identifier     shift, and go to state 47
    T_IntConstant    shift, and go to state 48
    T_FloatConstant  shift, and go to state 49
    T_BoolConstant   shift, and go to state 50

    PrimaryExpr                       go to state 63
    FunctionCallExpr                  go to state 64
    FunctionCallHeaderNoParameters    go to state 65
    FunctionCallHeaderWithParameters  go to state 66
    FunctionIdentifier                go to state 67
    PostfixExpr                       go to state 68
    UnaryExpr                         go to state 69
    MultiExpr                         go to state 70
    AdditionExpr                      go to state 71
    RelationExpr                      go to state 72
    EqualityExpr                      go to state 73
    LogicAndExpr                      go to state 74
    LogicOrExpr                       go to state 75
    Expression                        go to state 91


state 41

   33 CompoundStatement: T_LeftBrace T_RightBrace .

    $default  reduce using rule 33 (CompoundStatement)


state 42

   39 SingleStatement: T_Semicolon .

    $default  reduce using rule 39 (SingleStatement)


state 43

   81 UnaryExpr: T_Plus . UnaryExpr

    T_LeftParen      shift, and go to state 40
    T_Plus           shift, and go to state 43
    T_Dash           shift, and go to state 44
    T_Inc            shift, and go to state 45
    T_Dec            shift, and go to state 46
    T_Identifier     shift, and go to state 47
    T_IntConstant    shift, and go to state 48
    T_FloatConstant  shift, and go to state 49
    T_BoolConstant   shift, and go to state 50

    PrimaryExpr                       go to state 63
    FunctionCallExpr                  go to state 64
    FunctionCallHeaderNoParameters    go to state 65
    FunctionCallHeaderWithParameters  go to state 66
    FunctionIdentifier                go to state 67
    PostfixExpr                       go to state 68
    UnaryExpr                         go to state 92


state 44

   82 UnaryExpr: T_Dash . UnaryExpr

    T_LeftParen      shift, and go to state 40
    T_Plus           shift, and go to state 43
    T_Dash           shift, and go to state 44
    T_Inc            shift, and go to state 45
    T_Dec            shift, and go to state 46
    T_Identifier     shift, and go to state 47
    T_IntConstant    shift, and go to state 48
    T_FloatConstant  shift, and go to state 49
    T_BoolConstant   shift, and go to state 50

    PrimaryExpr                       go to state 63
    FunctionCallExpr                  go to state 64
    FunctionCallHeaderNoParameters    go to state 65
    FunctionCallHeaderWithParameters  go to state 66
    FunctionIdentifier                go to state 67
    PostfixExpr                       go to state 68
    UnaryExpr                         go to state 93


state 45

   79 UnaryExpr: T_Inc . UnaryExpr

    T_LeftParen      shift, and go to state 40
    T_Plus           shift, and go to state 43
    T_Dash           shift, and go to state 44
    T_Inc            shift, and go to state 45
    T_Dec            shift, and go to state 46
    T_Identifier     shift, and go to state 47
    T_IntConstant    shift, and go to state 48
    T_FloatConstant  shift, and go to state 49
    T_BoolConstant   shift, and go to state 50

    PrimaryExpr                       go to state 63
    FunctionCallExpr                  go to state 64
    FunctionCallHeaderNoParameters    go to state 65
    FunctionCallHeaderWithParameters  go to state 66
    FunctionIdentifier                go to state 67
    PostfixExpr                       go to state 68
    UnaryExpr                         go to state 94


state 46

   80 UnaryExpr: T_Dec . UnaryExpr

    T_LeftParen      shift, and go to state 40
    T_Plus           shift, and go to state 43
    T_Dash           shift, and go to state 44
    T_Inc            shift, and go to state 45
    T_Dec            shift, and go to state 46
    T_Identifier     shift, and go to state 47
    T_IntConstant    shift, and go to state 48
    T_FloatConstant  shift, and go to state 49
    T_BoolConstant   shift, and go to state 50

    PrimaryExpr                       go to state 63
    FunctionCallExpr                  go to state 64
    FunctionCallHeaderNoParameters    go to state 65
    FunctionCallHeaderWithParameters  go to state 66
    FunctionIdentifier                go to state 67
    PostfixExpr                       go to state 68
    UnaryExpr                         go to state 95


state 47

   59 PrimaryExpr: T_Identifier .
   71 FunctionIdentifier: T_Identifier .

    T_LeftParen  reduce using rule 71 (FunctionIdentifier)
    $default     reduce using rule 59 (PrimaryExpr)


state 48

   60 PrimaryExpr: T_IntConstant .

    $default  reduce using rule 60 (PrimaryExpr)


state 49

   61 PrimaryExpr: T_FloatConstant .

    $default  reduce using rule 61 (PrimaryExpr)


state 50

   62 PrimaryExpr: T_BoolConstant .

    $default  reduce using rule 62 (PrimaryExpr)


state 51

   40 SingleStatement: SingleDecl . T_Semicolon

    T_Semicolon  shift, and go to state 96


state 52

   12 SingleDecl: TypeDecl . T_Identifier
   14           | TypeDecl . T_Identifier T_Equal Initializer
   16           | TypeDecl . T_Identifier T_LeftBracket T_IntConstant T_RightBracket

    T_Identifier  shift, and go to state 97


state 53

   37 Statement: CompoundStatement .

    $default  reduce using rule 37 (Statement)


state 54

   34 CompoundStatement: T_LeftBrace StatementList . T_RightBrace
   36 StatementList: StatementList . Statement

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_While          shift, and go to state 31
    T_For            shift, and go to state 32
    T_If             shift, and go to state 33
    T_Return         shift, and go to state 34
    T_Break          shift, and go to state 35
    T_Continue       shift, and go to state 36
    T_Switch         shift, and go to state 37
    T_Case           shift, and go to state 38
    T_Default        shift, and go to state 39
    T_In             shift, and go to state 11
    T_Out            shift, and go to state 12
    T_Const          shift, and go to state 13
    T_Uniform        shift, and go to state 14
    T_LeftParen      shift, and go to state 40
    T_LeftBrace      shift, and go to state 25
    T_RightBrace     shift, and go to state 98
    T_Semicolon      shift, and go to state 42
    T_Plus           shift, and go to state 43
    T_Dash           shift, and go to state 44
    T_Inc            shift, and go to state 45
    T_Dec            shift, and go to state 46
    T_Identifier     shift, and go to state 47
    T_IntConstant    shift, and go to state 48
    T_FloatConstant  shift, and go to state 49
    T_BoolConstant   shift, and go to state 50

    SingleDecl                        go to state 51
    TypeQualify                       go to state 21
    TypeDecl                          go to state 52
    CompoundStatement                 go to state 53
    Statement                         go to state 99
    SingleStatement                   go to state 56
    SelectionStmt                     go to state 57
    SwitchStmt                        go to state 58
    CaseStmt                          go to state 59
    JumpStmt                          go to state 60
    WhileStmt                         go to state 61
    ForStmt                           go to state 62
    PrimaryExpr                       go to state 63
    FunctionCallExpr                  go to state 64
    FunctionCallHeaderNoParameters    go to state 65
    FunctionCallHeaderWithParameters  go to state 66
    FunctionIdentifier                go to state 67
    PostfixExpr                       go to state 68
    UnaryExpr                         go to state 69
    MultiExpr                         go to state 70
    AdditionExpr                      go to state 71
    RelationExpr                      go to state 72
    EqualityExpr                      go to state 73
    LogicAndExpr                      go to state 74
    LogicOrExpr                       go to state 75
    Expression                        go to state 76


state 55

   35 StatementList: Statement .

    $default  reduce using rule 35 (StatementList)


state 56

   38 Statement: SingleStatement .

    $default  reduce using rule 38 (Statement)


state 57

   42 SingleStatement: SelectionStmt .

    $default  reduce using rule 42 (SingleStatement)


state 58

   43 SingleStatement: SwitchStmt .

    $default  reduce using rule 43 (SingleStatement)


state 59

   44 SingleStatement: CaseStmt .

    $default  reduce using rule 44 (SingleStatement)


state 60

   45 SingleStatement: JumpStmt .

    $default  reduce using rule 45 (SingleStatement)


state 61

   46 SingleStatement: WhileStmt .

    $default  reduce using rule 46 (SingleStatement)


state 62

   47 SingleStatement: ForStmt .

    $default  reduce using rule 47 (SingleStatement)


state 63

   72 PostfixExpr: PrimaryExpr .

    $default  reduce using rule 72 (PostfixExpr)


state 64

   74 PostfixExpr: FunctionCallExpr .

    $default  reduce using rule 74 (PostfixExpr)


state 65

   65 FunctionCallExpr: FunctionCallHeaderNoParameters . T_RightParen

    T_RightParen  shift, and go to state 100


state 66

   64 FunctionCallExpr: FunctionCallHeaderWithParameters . T_RightParen

    T_RightParen  shift, and go to state 101


state 67

   66 FunctionCallHeaderNoParameters: FunctionIdentifier . T_LeftParen T_Void
   67                               | FunctionIdentifier . T_LeftParen
   68 FunctionCallHeaderWithParameters: FunctionIdentifier . T_LeftParen ArgumentList

    T_LeftParen  shift, and go to state 102


state 68

   73 PostfixExpr: PostfixExpr . T_LeftBracket Expression T_RightBracket
   75            | PostfixExpr . T_Inc
   76            | PostfixExpr . T_Dec
   77            | PostfixExpr . T_Dot T_FieldSelection
   78 UnaryExpr: PostfixExpr .

    T_LeftBracket  shift, and go to state 103
    T_Dot          shift, and go to state 104
    T_Inc          shift, and go to state 105
    T_Dec          shift, and go to state 106

    $default  reduce using rule 78 (UnaryExpr)


state 69

   83 MultiExpr: UnaryExpr .
  103 Expression: UnaryExpr . AssignOp Expression

    T_MulAssign  shift, and go to state 107
    T_DivAssign  shift, and go to state 108
    T_AddAssign  shift, and go to state 109
    T_SubAssign  shift, and go to state 110
    T_Equal      shift, and go to state 111

    $default  reduce using rule 83 (MultiExpr)

    AssignOp  go to state 112


state 70

   84 MultiExpr: MultiExpr . T_Star UnaryExpr
   85          | MultiExpr . T_Slash UnaryExpr
   86 AdditionExpr: MultiExpr .

    T_Star   shift, and go to state 113
    T_Slash  shift, and go to state 114

    $default  reduce using rule 86 (AdditionExpr)


state 71

   87 AdditionExpr: AdditionExpr . T_Plus MultiExpr
   88             | AdditionExpr . T_Dash MultiExpr
   89 RelationExpr: AdditionExpr .

    T_Plus  shift, and go to state 115
    T_Dash  shift, and go to state 116

    $default  reduce using rule 89 (RelationExpr)


state 72

   90 RelationExpr: RelationExpr . T_LeftAngle AdditionExpr
   91             | RelationExpr . T_RightAngle AdditionExpr
   92             | RelationExpr . T_GreaterEqual AdditionExpr
   93             | RelationExpr . T_LessEqual AdditionExpr
   94 EqualityExpr: RelationExpr .

    T_LessEqual     shift, and go to state 117
    T_GreaterEqual  shift, and go to state 118
    T_LeftAngle     shift, and go to state 119
    T_RightAngle    shift, and go to state 120

    $default  reduce using rule 94 (EqualityExpr)


state 73

   95 EqualityExpr: EqualityExpr . T_EQ RelationExpr
   96             | EqualityExpr . T_NE RelationExpr
   97 LogicAndExpr: EqualityExpr .

    T_EQ  shift, and go to state 121
    T_NE  shift, and go to state 122

    $default  reduce using rule 97 (LogicAndExpr)


state 74

   98 LogicAndExpr: LogicAndExpr . T_And EqualityExpr
   99 LogicOrExpr: LogicAndExpr .

    T_And  shift, and go to state 123
